[package]
authors = ["shortest <c0117230db@edu.teu.ac.jp>"]
edition = "2018"
name = "priotx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
ifstructs = "0.1.1"
nix = "0.19.1"
# tokio = {version = "0.3", features = ["full"]}
mio = {version = "0.7.6", features = ["os-poll", "os-ext", "net"]}
pnet = "0.27.2"
smoltcp = "0.6.0"
